package at.htl.entities;

public class DanceTeacher {
    public DanceTeacher() {
    }
}
